# kapsel

./: .gitignore  CMakeLists.txt  README.md
src/: command_types.h  constants.h  container.cpp  container.h  main.cpp  utils.cpp  utils.h
